--- a/apps/media/sabnzbd/storage.yaml
+++ b/apps/media/sabnzbd/storage.yaml
@@ -19,7 +19,7 @@ spec:
     readOnly: false
     volumeHandle: sabnzbd-media-volume-id
     volumeAttributes:
-      server: ${NFS_ADDRESS}
+      server: 192.168.1.252
       share: /volume1/media/config/sabnzbd
 ---
 apiVersion: v1
