--- a/apps/media/youtubedl/storage.yaml
+++ b/apps/media/youtubedl/storage.yaml
@@ -19,7 +19,7 @@ spec:
     readOnly: false
     volumeHandle: youtubedl-media-volume-id
     volumeAttributes:
-      server: ${NFS_ADDRESS}
+      server: 192.168.1.252
       share: /volume1/config/youtubedl
 ---
 apiVersion: v1
