--- a/core/csi-driver-nfs/storage-class.yaml
+++ b/core/csi-driver-nfs/storage-class.yaml
@@ -6,7 +6,7 @@ metadata:
   namespace: media
 provisioner: nfs.csi.k8s.io
 parameters:
-  server: ${NFS_ADDRESS}
+  server: 192.168.1.252
   share: /volume1/media
 reclaimPolicy: Retain
 volumeBindingMode: Immediate
@@ -22,7 +22,7 @@ metadata:
   namespace: default
 provisioner: nfs.csi.k8s.io
 parameters:
-  server: ${NFS_ADDRESS}
+  server: 192.168.1.252
   share: /volume1/data/postgresql
 reclaimPolicy: Retain
 volumeBindingMode: Immediate
