--- a/apps/media/base/external-secret.yaml
+++ b/apps/media/base/external-secret.yaml
@@ -2,6 +2,7 @@ apiVersion: external-secrets.io/v1beta1
 kind: ExternalSecret
 metadata:
   name: cluster-secrets
+  namespace: media
 spec:
   target:
     template:
