--- a/core/cloudflared-tunnel/config.yaml
+++ b/core/cloudflared-tunnel/config.yaml
@@ -61,7 +61,9 @@ ingress:
 
   # ARGO
   - hostname: argo.pmcd.io
-    service: http://argocd-server.argocd:80
+    service: https://argocd-server.argocd:443
+    originRequest:
+      noTLSVerify: true
 
   # PROXMOX
   - hostname: proxmox.pmcd.io
