--- a/apps/media/lidarr.yaml
+++ b/apps/media/lidarr.yaml
@@ -12,10 +12,9 @@ spec:
     namespace: media
     name: in-cluster
   project: apps
-  syncPolicy:
-    automated: { }
+  #  syncPolicy:
+  #    automated: { }
   source:
     path: apps/media/lidarr
     repoURL: https://github.com/patrickjmcd/k8s-argo.git
     targetRevision: main
-
