--- a/core/csi-driver-nfs.yaml
+++ b/core/csi-driver-nfs.yaml
@@ -12,10 +12,9 @@ spec:
     namespace: default
     name: in-cluster
   project: core-components
-  syncPolicy:
-    automated: { }
+  #  syncPolicy:
+  #    automated: { }
   source:
     path: core/csi-driver-nfs
     repoURL: https://github.com/patrickjmcd/k8s-argo.git
     targetRevision: main
-
