--- a/core/external-secrets-chart.yaml
+++ b/core/external-secrets-chart.yaml
@@ -8,8 +8,8 @@ spec:
     namespace: default
     name: in-cluster
   project: core-components
-  syncPolicy:
-    automated: { }
+  #  syncPolicy:
+  #    automated: { }
   source:
     chart: external-secrets
     repoURL: https://charts.external-secrets.io
