--- a/apps/media/base/storage.yaml
+++ b/apps/media/base/storage.yaml
@@ -1,4 +1,19 @@
 ---
+apiVersion: storage.k8s.io/v1
+kind: StorageClass
+metadata:
+  name: nfs-media
+  namespace: media
+provisioner: nfs.csi.k8s.io
+parameters:
+  server: 192.168.1.252
+  share: /volume1/media
+reclaimPolicy: Retain
+volumeBindingMode: Immediate
+mountOptions:
+  - hard
+  - nfsvers=4.1
+---
 apiVersion: v1
 kind: PersistentVolume
 metadata:
