--- a/apps/media/bazarr/deployment.yaml
+++ b/apps/media/bazarr/deployment.yaml
@@ -2,34 +2,34 @@ apiVersion: apps/v1
 kind: Deployment
 metadata:
   labels:
-    app.kubernetes.io/instance: lidarr
-    app.kubernetes.io/name: lidarr
-  name: lidarr
+    app.kubernetes.io/instance: bazarr
+    app.kubernetes.io/name: bazarr
+  name: bazarr
   namespace: media
 spec:
   selector:
     matchLabels:
-      app.kubernetes.io/instance: lidarr
-      app.kubernetes.io/name: lidarr
+      app.kubernetes.io/instance: bazarr
+      app.kubernetes.io/name: bazarr
   strategy:
     type: Recreate
   template:
     metadata:
       labels:
-        app.kubernetes.io/instance: lidarr
-        app.kubernetes.io/name: lidarr
+        app.kubernetes.io/instance: bazarr
+        app.kubernetes.io/name: bazarr
     spec:
       containers:
-        - name: lidarr
+        - name: bazarr
           env:
             - name: TZ
               value: America/Chicago
 
-          image: lidarr
+          image: bazarr
           imagePullPolicy: IfNotPresent
 
           ports:
-            - containerPort: 8686
+            - containerPort: 6767
               name: http
               protocol: TCP
 
@@ -47,7 +47,7 @@ spec:
                 - /usr/bin/env
                 - bash
                 - -c
-                - curl --fail localhost:8686/v3/system/status?apiKey=`IFS=\> && while
+                - curl --fail localhost:6767/v3/system/status?apiKey=`IFS=\> && while
                   read -d \< E C; do if [[ $E = "ApiKey" ]]; then echo $C; fi; done <
                   /config/config.xml`
             failureThreshold: 5
@@ -73,7 +73,7 @@ spec:
               memory: 256Mi
 
           volumeMounts:
-            - mountPath: /config/config.xml
+            - mountPath: /config/config/config.ini
               name: config
               readOnly: true
               subPath: config.xml
@@ -84,10 +84,10 @@ spec:
       volumes:
         - name: config
           configMap:
-            name: lidarr-config
+            name: bazarr-config
             items:
-              - key: config.xml
-                path: config.xml
+              - key: config.ini
+                path: config.ini
         - name: media
           persistentVolumeClaim:
             claimName: nfs-media-claim
