--- a/apps/media/bazarr/kustomization.yaml
+++ b/apps/media/bazarr/kustomization.yaml
@@ -1,5 +1,10 @@
 apiVersion: kustomize.config.k8s.io/v1beta1
 kind: Kustomization
 resources:
-  - helm-release.yaml
-  - storage.yaml
+  - deployment.yaml
+  - service.yaml
+
+images:
+  - name: bazarr
+    newName: linuxserver/bazarr
+    newTag: 1.3.1
