--- a/apps/homeauto/homebridge.yaml
+++ b/apps/homeauto/homebridge.yaml
@@ -9,7 +9,7 @@ metadata:
     argocd.argoproj.io/manifest-generate-paths: .
 spec:
   destination:
-    namespace: flux-system
+    namespace: homeauto
     name: in-cluster
   project: apps
 
