chore: add default domain

--- a/core/knative-serving/kustomization.yaml
+++ b/core/knative-serving/kustomization.yaml
@@ -3,3 +3,5 @@ kind: Kustomization
 resources:
   - knative-serving.yaml
   - namespace.yaml
+  - peer-authentication.yaml
+  - https://github.com/knative/serving/releases/download/knative-v1.12.3/serving-default-domain.yaml
