chore: use home.pmcd.dev for landing page

--- a/core/cloudflared-tunnel/config.yaml
+++ b/core/cloudflared-tunnel/config.yaml
@@ -25,7 +25,7 @@ ingress:
   - hostname: pgadmin.pmcd.io
     service: http://pgadmin-pgadmin4:80
   - hostname: pmcd.dev
-    service: http://pmcd.dev:80
+    service: http://home.pmcd.dev:80
 
   # FLUX SYSTEM
   - hostname: weave.pmcd.io
