--- a/core/cloudflared-tunnel/config.yaml
+++ b/core/cloudflared-tunnel/config.yaml
@@ -24,8 +24,10 @@ ingress:
     service: http://table-rock-lake-level:80
   - hostname: pgadmin.pmcd.io
     service: http://pgadmin-pgadmin4:80
+  - hostname: home.pmcd.dev
+    service: http://pmcd-dev:80
   - hostname: pmcd.dev
-    service: http://home.pmcd.dev:80
+    service: http://pmcd-dev:80
 
   # FLUX SYSTEM
   - hostname: weave.pmcd.io
