chore: add tne-portal

--- a/core/cloudflared-tunnel/config.yaml
+++ b/core/cloudflared-tunnel/config.yaml
@@ -28,6 +28,8 @@ ingress:
     service: http://pmcd-dev:80
   - hostname: pmcd.dev
     service: http://pmcd-dev:80
+  - hostname: tne.pmcd.dev
+    service: http://tne-portal:80
 
   # FLUX SYSTEM
   - hostname: weave.pmcd.io
