chore: lidarr no read only

--- a/apps/media/lidarr/deployment.yaml
+++ b/apps/media/lidarr/deployment.yaml
@@ -75,7 +75,7 @@ spec:
           volumeMounts:
             - mountPath: /config/config.xml
               name: config
-              readOnly: true
+              readOnly: false
               subPath: config.xml
             - mountPath: /media
               name: media
