--- a/apps/tne-api/kustomization.yaml
+++ b/apps/tne-api/kustomization.yaml
@@ -7,5 +7,4 @@ resources:
 images:
 - name: tne-portal
   newName: ghcr.io/the-network-effect/portal-app
-  newTag: v1.0.0
-
+  newTag: 8dacb552593c0c49d9642433b787cc3272d1a5b4
