--- a/apps/tne-api/deployment.yaml
+++ b/apps/tne-api/deployment.yaml
@@ -24,7 +24,19 @@ spec:
         - name: tne-portal
           image: tne-portal
           imagePullPolicy: IfNotPresent
-
+          env:
+            - name: AWS_ACCESS_KEY_ID
+              valueFrom:
+                secretKeyRef:
+                  key: access-key
+                  name: awssm-secret
+            - name: AWS_SECRET_ACCESS_KEY
+              valueFrom:
+                secretKeyRef:
+                  key: secret-access-key
+                  name: awssm-secret
+            - name: AWS_REGION
+              value: us-east-1
           livenessProbe:
             failureThreshold: 3
             periodSeconds: 10
