--- a/apps/tne-api/kustomization.yaml
+++ b/apps/tne-api/kustomization.yaml
@@ -5,6 +5,6 @@ resources:
 - service.yaml
 
 images:
-- name: tne-portal
+- name: tne-api
   newName: ghcr.io/the-network-effect/portal-app
   newTag: 8dacb552593c0c49d9642433b787cc3272d1a5b4
