--- a/apps/tne-portal/service.yaml
+++ b/apps/tne-portal/service.yaml
@@ -2,9 +2,9 @@ apiVersion: v1
 kind: Service
 metadata:
   labels:
-    app.kubernetes.io/instance: tne-api
-    app.kubernetes.io/name: tne-api
-  name: tne-api
+    app.kubernetes.io/instance: tne-portal
+    app.kubernetes.io/name: tne-portal
+  name: tne-portal
   namespace: default
 spec:
   ports:
@@ -13,6 +13,6 @@ spec:
       protocol: TCP
       targetPort: http
   selector:
-    app.kubernetes.io/instance: tne-api
-    app.kubernetes.io/name: tne-api
+    app.kubernetes.io/instance: tne-portal
+    app.kubernetes.io/name: tne-portal
   type: ClusterIP
