--- a/apps/tne-api/deployment.yaml
+++ b/apps/tne-api/deployment.yaml
@@ -42,12 +42,10 @@ spec:
             periodSeconds: 10
             successThreshold: 1
             tcpSocket:
-              port: 3000
+              port: http
             timeoutSeconds: 1
-
           ports:
-            - containerPort: 3000
-              hostPort: 3000
+            - containerPort: 8080
               name: http
               protocol: TCP
           readinessProbe:
@@ -55,7 +53,7 @@ spec:
             periodSeconds: 10
             successThreshold: 1
             tcpSocket:
-              port: 3000
+              port: http
             timeoutSeconds: 1
           resources:
             limits:
