--- a/apps/tne-api/kustomization.yaml
+++ b/apps/tne-api/kustomization.yaml
@@ -6,5 +6,5 @@ resources:
 
 images:
 - name: tne-api
-  newName: ghcr.io/the-network-effect/portal-app
-  newTag: 8dacb552593c0c49d9642433b787cc3272d1a5b4
+  newName: ghcr.io/the-network-effect/tne-api
+  newTag: v1.0.0
