--- a/apps/tne-api/service.yaml
+++ b/apps/tne-api/service.yaml
@@ -10,8 +10,7 @@ spec:
   ports:
     - name: http
       port: 80
-      protocol: TCP
-      targetPort: http
+      targetPort: 8080
   selector:
     app.kubernetes.io/instance: tne-api
     app.kubernetes.io/name: tne-api
