--- a/apps/tne-api/deployment.yaml
+++ b/apps/tne-api/deployment.yaml
@@ -47,13 +47,13 @@ spec:
             requests:
               cpu: 100m
               memory: 256Mi
-          startupProbe:
-            failureThreshold: 30
-            periodSeconds: 5
-            successThreshold: 1
-            grpc:
-              port: 8080
-            timeoutSeconds: 1
+#          startupProbe:
+#            failureThreshold: 30
+#            periodSeconds: 5
+#            successThreshold: 1
+#            grpc:
+#              port: 8080
+#            timeoutSeconds: 1
           livenessProbe:
             failureThreshold: 3
             periodSeconds: 10
@@ -61,13 +61,13 @@ spec:
             grpc:
               port: 8080
             timeoutSeconds: 1
-          readinessProbe:
-            failureThreshold: 3
-            periodSeconds: 10
-            successThreshold: 1
-            grpc:
-              port: 8080
-            timeoutSeconds: 1
+#          readinessProbe:
+#            failureThreshold: 3
+#            periodSeconds: 10
+#            successThreshold: 1
+#            grpc:
+#              port: 8080
+#            timeoutSeconds: 1
           terminationMessagePath: /dev/termination-log
           terminationMessagePolicy: File
       restartPolicy: Always
