--- a/apps/tne-api/deployment.yaml
+++ b/apps/tne-api/deployment.yaml
@@ -40,6 +40,9 @@ spec:
 
           ports:
             - containerPort: 8080
+              name: http
+              protocol: TCP
+
           resources:
             limits:
               cpu: 1000m
@@ -47,27 +50,30 @@ spec:
             requests:
               cpu: 100m
               memory: 256Mi
-#          startupProbe:
-#            failureThreshold: 30
-#            periodSeconds: 5
-#            successThreshold: 1
-#            grpc:
-#              port: 8080
-#            timeoutSeconds: 1
+          startupProbe:
+            failureThreshold: 30
+            periodSeconds: 5
+            successThreshold: 1
+            httpGet:
+              path: /status
+              port: http
+            timeoutSeconds: 1
           livenessProbe:
             failureThreshold: 3
             periodSeconds: 10
             successThreshold: 1
-            grpc:
-              port: 8080
+            httpGet:
+              path: /status
+              port: http
             timeoutSeconds: 1
-#          readinessProbe:
-#            failureThreshold: 3
-#            periodSeconds: 10
-#            successThreshold: 1
-#            grpc:
-#              port: 8080
-#            timeoutSeconds: 1
+          readinessProbe:
+            failureThreshold: 3
+            periodSeconds: 10
+            successThreshold: 1
+            httpGet:
+              path: /status
+              port: http
+            timeoutSeconds: 1
           terminationMessagePath: /dev/termination-log
           terminationMessagePolicy: File
       restartPolicy: Always
