--- a/apps/tne-api/deployment.yaml
+++ b/apps/tne-api/deployment.yaml
@@ -54,25 +54,22 @@ spec:
             failureThreshold: 30
             periodSeconds: 5
             successThreshold: 1
-            httpGet:
-              path: /status
-              port: http
+            grpc:
+              port: 8080
             timeoutSeconds: 1
           livenessProbe:
             failureThreshold: 3
             periodSeconds: 10
             successThreshold: 1
-            httpGet:
-              path: /status
-              port: http
+            grpc:
+              port: 8080
             timeoutSeconds: 1
           readinessProbe:
             failureThreshold: 3
             periodSeconds: 10
             successThreshold: 1
-            httpGet:
-              path: /status
-              port: http
+            grpc:
+              port: 8080
             timeoutSeconds: 1
           terminationMessagePath: /dev/termination-log
           terminationMessagePolicy: File
