feat: add glance to cloudflare tunnel

--- a/core/cloudflared-tunnel/config.yaml
+++ b/core/cloudflared-tunnel/config.yaml
@@ -36,6 +36,8 @@ ingress:
     service: http://govmikeparsons:80
   - hostname: bigcapital.pmcd.dev
     service: http://bigcapital:80
+  - hostname: glance.pmcd.io
+    service: http://glance:80
 
   # FLUX SYSTEM
   - hostname: weave.pmcd.io
