feat: add rick beato channel

--- a/apps/glance/glance.yml
+++ b/apps/glance/glance.yml
@@ -32,6 +32,7 @@ pages:
           - type: videos
             channels:
               - UC4eYXhJI4-7wSWc8UNRwD4A # NPR Music
+              - UCJquYOG5EL82sKTfH9aMA9Q # Rick Beato
               - UCR-DXc1voovS8nhAvccRZhg # Jeff Geerling
               - UCv6J_jJa8GJqFwQNgNrMuww # ServeTheHome
               - UCOk-gHyjcWZNj3Br4oxwh0A # Techno Tim
