fix: add command to tne api

--- a/apps/tne-api/deployment.yaml
+++ b/apps/tne-api/deployment.yaml
@@ -37,6 +37,8 @@ spec:
                   name: awssm-secret
             - name: AWS_REGION
               value: us-east-1
+          args:
+            - serve
 
           ports:
             - containerPort: 8080
