fix: trust host

--- a/apps/tne-api/deployment.yaml
+++ b/apps/tne-api/deployment.yaml
@@ -37,6 +37,8 @@ spec:
                   name: awssm-secret
             - name: AWS_REGION
               value: us-east-1
+            - name: AUTH_TRUST_HOST
+              value: "true"
           args:
             - serve
 
