--- a/apps/tne-portal/kustomization.yaml
+++ b/apps/tne-portal/kustomization.yaml
@@ -1,10 +1,11 @@
 apiVersion: kustomize.config.k8s.io/v1beta1
 kind: Kustomization
 resources:
-- deployment.yaml
-- service.yaml
+  - rollout.yaml
+  - service.yaml
+  - service-preview.yaml
 
 images:
-- name: tne-portal
-  newName: ghcr.io/the-network-effect/portal-app
-  newTag: 766c56cf9a7fcb094e2bf46f54dd8040c1b9d343
+  - name: tne-portal
+    newName: ghcr.io/the-network-effect/portal-app
+    newTag: 766c56cf9a7fcb094e2bf46f54dd8040c1b9d343
